[fix] correct vertical align of social buttons

--- a/source/css/com.css.sass
+++ b/source/css/com.css.sass
@@ -444,6 +444,9 @@ button.button-skin[disabled]
   &>*
     display: inline-block
 
+.social-buttons
+  vertical-align: top
+
 /* ============================
  * 
  *     Footer - #colophon
